# adservice/src/main/resources/api/openapi.yaml
@@ -292,6 +292,20 @@ paths:
           text/plain:
             schema:
               type: string
+  /conversion:
+    get:
+      summary: Attribution Reporting API - Register the conversion event
+      description: Attribution Reporting API - Register the conversion event
+      tags:
+        - conversion
+      operationId: conversion
+      responses:
+        '200':
+          description: Success
+        '400':
+          description: Rejected
+        '500':
+          description: The call was unsuccessful due to exceptions on the Server
 
 components:
   schemas:
